<resources>
    <string name="app_name">Ski seller</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_myReservation">My reservations</string>
    <string name="title_findUs">Find us</string>
    <string name="title_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="position">Share your position</string>
    <string name="displayProducts">Display products</string>
    <string name="brands">Brands</string>
    <string name="newsletter">Newsletter</string>
    <string name="discounts">Show products discounts</string>
    <string name="rossignol">Rossignol / 180-189cm / 600.-</string>
    <string name="showDetails">Details</string>

    <string-array name="skiBrands">
        <item>All brands</item>
        <item>Rossignol</item>
        <item>K2</item>
        <item>Fisher</item>
        <item>Salomon</item>
        <item>Head</item>
    </string-array>

    <string-array name="filterBy">
        <item>Filter by</item>
        <item>Increasing price</item>
        <item>Decreasing price</item>
    </string-array>

    <string-array name="type">
        <item>Type</item>
        <item>Current ski</item>
        <item>Downhill ski</item>
        <item>Slalom ski</item>
    </string-array>

    <string-array name="location">
        <item>Location</item>
        <item>Anzère</item>
        <item>Verbier</item>
    </string-array>

    <string-array name="size">
        <item>Size</item>
        <item>150-159</item>
        <item>160-169</item>
        <item>170-179</item>
        <item>180-189</item>
        <item>190-199</item>
        <item>200-209</item>
    </string-array>
</resources>
