<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_products_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_myReservations"
        android:icon="@drawable/ic_my_reservations"
        android:title="@string/title_myReservation" />

    <item
        android:id="@+id/navigation_findUs"
        android:icon="@drawable/ic_findus_black_24dp"
        android:title="@string/title_findUs" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
